--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Jongmin Moon
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  Publication: "aboutme"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
@@ -51,12 +51,12 @@ round-avatar: true
 social-network-links:
   email: "jmoon@utexas.edu"
   #rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: "@daattali"
-  whatsapp: 15551212
+  #facebook: deanattali
+  github: neuromoon
+  twitter: jongmin.m
+  #patreon: DeanAttali
+  #youtube: "@daattali"
+  #whatsapp: 15551212
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
 #  linkedin: daattali
