--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Jongmin Moon
 ###############################################
 
 navbar-links:
-  Publication: "aboutme"
+  Publication: "publication"
 
 
 ################
