--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ social-network-links:
   #rss: true  # remove this line if you don't want to show an RSS link at the bottom
   #facebook: deanattali
   github: neuromoon
-  twitter: jongmin.m
+  twitter: jongmin_moon
   #patreon: DeanAttali
   #youtube: "@daattali"
   #whatsapp: 15551212
